--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,5 +2,5 @@
 <resources>
 
     <string name="app_name">Flower power</string>
-    <string name="settings">Settings</string>
+    <string name="restart">Restart</string>
 </resources>
